# color_picker

./: CMakeLists.txt  README.md  color_picker.qrc
include/: controller.hxx  display.hxx
src/: controller.cxx  display.cxx  main.cxx
ui/: Main.qml
